[GStreamer] Fix the way GstStreamCollection is handled https://bugs.webkit.org/show_bug.cgi?id=184588

Patch by Thibault Saunier <tsaunier@igalia.com> on 2018-06-07
Reviewed by Philippe Normand.

The stream collection message replaces the collection of stream previously
advertised, this means that we should rebuild our set of Track from scratch
and not update previously exposed tracks.

In the end, this simplifies the code as we do not care about what
tracks existed previously, we just need to expose what GStreamer tells
us, deleting any previous state.

Handle the STREAM_COLLECTION message from the sync handler so that tracks
are updated before we mark the pipeline as READY for the live case (everything
happen synchronously with the call to the `load()` method in that case),
the update still always happens on the main thread.

No new tests is added as this is mostly refactoring, it is already tested and it
will fix MediaStream tests that are currently disabled as the support is being
implemented in #185787.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::clearTracks): Removes all tracks.
(WebCore::MediaPlayerPrivateGStreamer::updateTracks): Updates configured tracks from the new GstStreamColection track.
(WebCore::MediaPlayerPrivateGStreamer::handleMessage): Stop handling GST_STREAM_COLLECTION event.
(WebCore::MediaPlayerPrivateGStreamer::handleSyncMessage): Handle stream collection event synchronously.
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h: Add handleSyncMessage

Canonical link: https://commits.webkit.org/201754@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232579 268f45cc-cd09-0410-ab3c-d52691b4dbfc