Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp
@@ -622,75 +622,67 @@ bool MediaPlayerPrivateGStreamer::seeking() const
 }
 
 #if GST_CHECK_VERSION(1, 10, 0)
+#define CLEAR_TRACKS(tracks, method) \
+    for (auto& track : tracks.values())\
+        method(*track);\
+    tracks.clear();
+
+void MediaPlayerPrivateGStreamer::clearTracks()
+{
+#if ENABLE(VIDEO_TRACK)
+    CLEAR_TRACKS(m_audioTracks, m_player->removeAudioTrack);
+    CLEAR_TRACKS(m_videoTracks, m_player->removeVideoTrack);
+    CLEAR_TRACKS(m_textTracks, m_player->removeTextTrack);
+#endif // ENABLE(VIDEO_TRACK)
+}
+#undef CLEAR_TRACKS
+
+#if ENABLE(VIDEO_TRACK)
+#define CREATE_TRACK(type, Type) \
+    m_has##Type = true; \
+    if (!useMediaSource) {\
+        RefPtr<Type##TrackPrivateGStreamer> track = Type##TrackPrivateGStreamer::create(createWeakPtr(), i, stream); \
+        m_##type##Tracks.add(track->id(), track); \
+        m_player->add##Type##Track(*track);\
+        if (gst_stream_get_stream_flags(stream.get()) & GST_STREAM_FLAG_SELECT) {                                    \
+            m_current##Type##StreamId = String(gst_stream_get_stream_id(stream.get()));                              \
+        }                                                                                                            \
+    }
+#else
+#define CREATE_TRACK(type, _id, tracks, method, stream) m_has##Type## = true;
+#endif // ENABLE(VIDEO_TRACK)
+
 void MediaPlayerPrivateGStreamer::updateTracks()
 {
     ASSERT(!m_isLegacyPlaybin);
 
     bool useMediaSource = isMediaSource();
     unsigned length = gst_stream_collection_get_size(m_streamCollection.get());
-    Vector<String> validAudioStreams;
-    Vector<String> validVideoStreams;
-    Vector<String> validTextStreams;
+
+    bool oldHasAudio = m_hasAudio;
+    bool oldHasVideo = m_hasVideo;
+    // New stream collections override previous ones.
+    clearTracks();
     for (unsigned i = 0; i < length; i++) {
         GRefPtr<GstStream> stream = gst_stream_collection_get_stream(m_streamCollection.get(), i);
         String streamId(gst_stream_get_stream_id(stream.get()));
         GstStreamType type = gst_stream_get_stream_type(stream.get());
-        GST_DEBUG("Inspecting %s track with ID %s", gst_stream_type_get_name(type), streamId.utf8().data());
+
+        GST_DEBUG_OBJECT(pipeline(), "Inspecting %s track with ID %s", gst_stream_type_get_name(type), streamId.utf8().data());
         if (type & GST_STREAM_TYPE_AUDIO) {
-            validAudioStreams.append(streamId);
-#if ENABLE(VIDEO_TRACK)
-            if (!useMediaSource) {
-                unsigned localIndex = i - validVideoStreams.size() - validTextStreams.size();
-                if (localIndex < m_audioTracks.size()) {
-                    if (m_audioTracks.contains(streamId))
-                        continue;
-                }
-
-                RefPtr<AudioTrackPrivateGStreamer> track = AudioTrackPrivateGStreamer::create(createWeakPtr(), i, stream);
-                m_audioTracks.add(track->id(), track);
-                m_player->addAudioTrack(*track);
-            }
-#endif
+            CREATE_TRACK(audio, Audio)
         } else if (type & GST_STREAM_TYPE_VIDEO) {
-            validVideoStreams.append(streamId);
+            CREATE_TRACK(video, Video)
+        } else if (type & GST_STREAM_TYPE_TEXT && !useMediaSource) {
 #if ENABLE(VIDEO_TRACK)
-            if (!useMediaSource) {
-                unsigned localIndex = i - validAudioStreams.size() - validTextStreams.size();
-                if (localIndex < m_videoTracks.size()) {
-                    if (m_videoTracks.contains(streamId))
-                        continue;
-                }
-
-                RefPtr<VideoTrackPrivateGStreamer> track = VideoTrackPrivateGStreamer::create(createWeakPtr(), i, stream);
-                m_videoTracks.add(track->id(), track);
-                m_player->addVideoTrack(*track);
-            }
-#endif
-        } else if (type & GST_STREAM_TYPE_TEXT) {
-            validTextStreams.append(streamId);
-#if ENABLE(VIDEO_TRACK)
-            if (!useMediaSource) {
-                unsigned localIndex = i - validVideoStreams.size() - validAudioStreams.size();
-                if (localIndex < m_textTracks.size()) {
-                    if (m_textTracks.contains(streamId))
-                        continue;
-                }
-
-                RefPtr<InbandTextTrackPrivateGStreamer> track = InbandTextTrackPrivateGStreamer::create(localIndex, stream);
-                m_textTracks.add(streamId, track);
-                m_player->addTextTrack(*track);
-            }
+            RefPtr<InbandTextTrackPrivateGStreamer> track = InbandTextTrackPrivateGStreamer::create(i, stream);
+            m_textTracks.add(streamId, track);
+            m_player->addTextTrack(*track);
 #endif
         } else
             GST_WARNING("Unknown track type found for stream %s", streamId.utf8().data());
     }
 
-    GST_INFO("Media has %zu video tracks, %zu audio tracks and %zu text tracks", validVideoStreams.size(), validAudioStreams.size(), validTextStreams.size());
-
-    bool oldHasAudio = m_hasAudio;
-    bool oldHasVideo = m_hasVideo;
-    m_hasAudio = !validAudioStreams.isEmpty();
-    m_hasVideo = !validVideoStreams.isEmpty();
     if ((oldHasVideo != m_hasVideo) || (oldHasAudio != m_hasAudio))
         m_player->characteristicChanged();
 
@@ -703,15 +695,9 @@ void MediaPlayerPrivateGStreamer::updateTracks()
         return;
     }
 
-#if ENABLE(VIDEO_TRACK)
-    purgeInvalidAudioTracks(validAudioStreams);
-    purgeInvalidVideoTracks(validVideoStreams);
-    purgeInvalidTextTracks(validTextStreams);
-#endif
-
     m_player->client().mediaPlayerEngineUpdated(m_player);
 }
-#endif
+#endif // GST_CHECK_VERSION(1, 10, 0)
 
 void MediaPlayerPrivateGStreamer::enableTrack(TrackPrivateBaseGStreamer::TrackType trackType, unsigned index)
 {
@@ -1299,21 +1285,6 @@ void MediaPlayerPrivateGStreamer::handleMessage(GstMessage* message)
         break;
     }
 #if GST_CHECK_VERSION(1, 10, 0)
-    case GST_MESSAGE_STREAM_COLLECTION: {
-        if (m_isLegacyPlaybin)
-            break;
-
-        GRefPtr<GstStreamCollection> collection;
-        gst_message_parse_stream_collection(message, &collection.outPtr());
-
-        if (collection) {
-            m_streamCollection.swap(collection);
-            m_notifier->notify(MainThreadNotification::StreamCollectionChanged, [this] {
-                this->updateTracks();
-            });
-        }
-        break;
-    }
     case GST_MESSAGE_STREAMS_SELECTED: {
         GRefPtr<GstStreamCollection> collection;
         gst_message_parse_streams_selected(message, &collection.outPtr());
@@ -1981,6 +1952,25 @@ void MediaPlayerPrivateGStreamer::updateStates()
                 GST_DEBUG("[Seek] seeking to %s failed", toString(m_seekTime).utf8().data());
         }
     }
+}
+
+bool MediaPlayerPrivateGStreamer::handleSyncMessage(GstMessage* message)
+{
+#if GST_CHECK_VERSION(1, 10, 0)
+    if (GST_MESSAGE_TYPE(message) == GST_MESSAGE_STREAM_COLLECTION && !m_isLegacyPlaybin) {
+        GRefPtr<GstStreamCollection> collection;
+        gst_message_parse_stream_collection(message, &collection.outPtr());
+
+        if (collection) {
+            m_streamCollection.swap(collection);
+            m_notifier->notify(MainThreadNotification::StreamCollectionChanged, [this] {
+                this->updateTracks();
+            });
+        }
+    }
+#endif
+
+    return MediaPlayerPrivateGStreamerBase::handleSyncMessage(message);
 }
 
 void MediaPlayerPrivateGStreamer::mediaLocationChanged(GstMessage* message)
