Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h
@@ -133,6 +133,8 @@ public:
 
     void enableTrack(TrackPrivateBaseGStreamer::TrackType, unsigned index);
 
+    bool handleSyncMessage(GstMessage*) override;
+
 private:
     static void getSupportedTypes(HashSet<String, ASCIICaseInsensitiveHash>&);
     static MediaPlayer::SupportsType supportsType(const MediaEngineSupportParameters&);
@@ -180,6 +182,7 @@ private:
 
 #if GST_CHECK_VERSION(1, 10, 0)
     void updateTracks();
+    void clearTracks();
 #endif
 
 protected:
